#AWE-4000R Project

noinst_LIBRARIES = libawecommon.a

libawecommon_a_SOURCES = SaleBusinessFunc.cpp InvBusinessFunc.cpp DeclareBusinessFunc.cpp ManageBusinessFunc.cpp BusinessJSKProc.cpp BusinessXmlProc.cpp BusinessBase.cpp YWXMLGY.cpp
#libawecommon_a_SOURCES =  YWXMLGY.cpp
INCLUDES = -I../../SYS -I../../DRV -I../../DB -I../YWXML
